--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html>
   <head>
     <link rel="stylesheet" href="/css/style.css" />
-    <title>YOUR NAME</title>
-    <meta name="description" content="some desc">
+    <title>Aditi Sekar</title>
+    <meta name="description" content="Information about me">
   </head>
 
   <body>
     <header class="main-header">
       <br>
-      <h1 class="my-name my-name-large">YOUR NAME</h1>
+      <h1 class="my-name my-name-large">Aditi Sekar</h1>
     </header>
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
       <img class="about-prof-image" src="/assets/profile.png" height="200" width="200">
-      <p> INTRODUCE YOURSELF
+      <p> Hello, my name is Aditi Sekar and I am a computer science major who is also minoring in law and society. 
 
       </p>
 
       <p>
-        Relevant Info
+       	My interest in computer science stems from my years of competing in robotics. 
       </p>
 
       <p>
-        your interests
+        I love painting, reading, and hiking. 
       </p>
 
       <br><br><br><br><br><br><br><br><br><br><br>
@@ -35,13 +35,13 @@
         <ul class="nav footer-nav">
           <li>
             <!-- YOUR GITHUB -->
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/sekaraditi" target="_blank">
               <img class="sm-logo" src="/assets/githubwhite.png" height="50" width="50">
             </a>
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a href="https://www.linkedin.com/in/aditi-sekar/" target="_blank">
               <img class="sm-logo" src="/assets/linkedinwhite.png" height="50" width="50">
 
             </a>
