added another social media

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             </a>
           </li>
           <li>
+	     <a href="https://www.instagram.com/aditisekar/" target="_blank">
+             <img class="sm-logo" src="/assets/instaLogo.png" height="50" width="50">
+
+            </a>
+          </li>
+          <li>
             <a href="https://www.cs.umd.edu/" target="_blank">
               <img src="/assets/umd-logo.png" height="34" width="195">
             </a>
