--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </p>
 
       <p>
-       	My interest in computer science stems from my years of competing in robotics. 
+       	My interest in computer science stems from my years of competing in robotics. I want to pursue law in the future. 
       </p>
 
       <p>
