--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Aditi Sekar</title>
     <meta name="description" content="Information about me">
   </head>
@@ -14,7 +14,7 @@
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="/assets/profile.png" height="200" width="200">
+      <img class="about-prof-image" src="assets/profile.png" height="200" width="200">
       <p> Hello, my name is Aditi Sekar and I am a computer science major who is also minoring in law and society. 
 
       </p>
@@ -36,25 +36,25 @@
           <li>
             <!-- YOUR GITHUB -->
             <a href="https://github.com/sekaraditi" target="_blank">
-              <img class="sm-logo" src="/assets/githubwhite.png" height="50" width="50">
+              <img class="sm-logo" src="assets/githubwhite.png" height="50" width="50">
             </a>
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
             <a href="https://www.linkedin.com/in/aditi-sekar/" target="_blank">
-              <img class="sm-logo" src="/assets/linkedinwhite.png" height="50" width="50">
+              <img class="sm-logo" src="assets/linkedinwhite.png" height="50" width="50">
 
             </a>
           </li>
           <li>
 	     <a href="https://www.instagram.com/aditisekar/" target="_blank">
-             <img class="sm-logo" src="/assets/instaLogo.png" height="50" width="50">
+             <img class="sm-logo" src="assets/instaLogo.png" height="50" width="50">
 
             </a>
           </li>
           <li>
             <a href="https://www.cs.umd.edu/" target="_blank">
-              <img src="/assets/umd-logo.png" height="34" width="195">
+              <img src="assets/umd-logo.png" height="34" width="195">
             </a>
           </li>
 
@@ -62,7 +62,7 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/script.js"></script>  
+    <script type="text/javascript" src="js/script.js"></script>  
   </body>
 	
   
