--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="main-header">
       <br>
-      <h1 class="my-name my-name-large">Aditi Sekar</h1>
+      <h1 class="my-name my-name-large">Aditi Sekar!</h1>
     </header>
     <br><br><br>
     <section class="content-section container">
